--- a/_posts/2021-10-18-cad2018.md
+++ b/_posts/2021-10-18-cad2018.md
@@ -30,194 +30,248 @@ mathjax: true
 
 |<strong>产品名称</strong>|<strong>产品 Key</strong>|
 |---|---|
-|Autodesk Structural Bridge Design 2016|	954H1|
-|Autodesk Showcase Professional 2016|	295H1|
-|Autodesk Real-Time Ray Tracing Cluster 2016|	692H1|
-|Autodesk Maya Entertainment Creation Suite Premium 2016|	775H1|
-|Autodesk Entertainment Creation Suite Standard 2016| Exclusives	P01H1|
-|Autodesk Entertainment Creation Suite Premium 2016| Exclusives	P02H1|
-|Autodesk Design Academy 2016|	200H1|
-|Autodesk Animation Academy 2016|	548H1|
-|AutoCAD Revit Structure Suite 2016|	256H1|
-|AutoCAD Revit MEP Suite 2016|	257H1|
-|AutoCAD Revit Architecture Suite 2016|	241H1|
-|AutoCAD ecscad 2016 R2|	562G2|
-|AutoCAD ecscad 2016|	562H1|
-|T1 Enterprise Multi-Flex Standard Bundle 2016|	891H1|
-|RealDWG 2016|	151H1|
-|Enterprise Multi-Flex Enhanced Bundle 2016|	980H1|
-|Autodesk VRED Render Node 2016Autodesk Raytracing Cluster Module for Autodesk VRED 2016|	890H1|
-|Autodesk VRED Extension for PROSTEP OpenPDM 2016|	A64H1|
-|Autodesk Vault Basic 2016|	463H1|
-|Autodesk Urban Canvas 2016|	A79H1|
-|Autodesk Studio Wall 2016|	992H1|
-|Autodesk Simulation Moldflow Flex 2016|	892H1|
-|Autodesk Simulation Mechanical Flex 2016|	A74H1|
-|Autodesk Simulation Flex 2016|	893H1|
-|Autodesk Roadway Design for InfraWorks 360 2016|	953H1|
-|Autodesk Revit ETO – Distribution 2016|	A68H1|
-|Autodesk Revit ETO – Distribution Package 2016|	A67H1|
-|Autodesk Revit ETO – Developer 2016|	A69H1|
-|Autodesk ReCap 360 2016|	964H1|
-|Autodesk Nastran In-CAD 2016|	987H1|
-|Autodesk Nastran 2016|	986H1|
-|Autodesk Moldflow Flex 2016|	A75H1|
-|Autodesk Inventor HSM Pro 2016|	970H1|
-|Autodesk Inventor ETO – Server 2016|	997H1|
-|Autodesk Inventor ETO – Distribution 2016|	996H1|
-|Autodesk Inventor ETO – Developer 2016|	A66H1|
-|Autodesk Inventor Engineer-to-Order Series Distribution Fee 2016|	636H1|
-|Autodesk InfraWorks 360 LT 2016|	A77H1|
-|Autodesk Helius PFA 2016|	899H1|
-|Autodesk Helius Composite 2016|	918H1|
-|Autodesk Drainage Design for InfraWorks 360 2016|	984H1|
-|Autodesk CFD Motion 2016|	811H1|
-|Autodesk CFD Flex 2016|	A73H1|
-|Autodesk CFD Design Study Environment 2016|	812H1|
-|Autodesk CFD Connection for Pro/ENGINEER 2016|	822H1|
-|Autodesk CFD Connection for Parasolid 2016|	824H1|
-|Autodesk CFD Connection for NX 2016|	815H1|
-|Autodesk CFD Advanced 2016|	810H1|
-|Autodesk CFD 2016|	809H1|
-|Autodesk Bridge Design for InfraWorks 360 2016|	956H1|
-|Autodesk AutoCAD with Advance Steel 2016|	958H1|
-|Autodesk Alias SpeedForm 2016|	A62H1|
-|Autodesk Alias Concept 2016|	A63H1|
-|Autodesk 3ds Max 2016|	128H1|
-|Autodesk 3ds Max Design 2016|	495H1|
-|Autodesk 3ds Max Entertainment Creation Suite Premium 2016|	774H1|
-|Autodesk 3ds Max Entertainment Creation Suite Standard 2016|	661H1|
-|Autodesk 3ds Max with SoftImage 2016|	978H1|
-|Autodesk Advance Concrete 2016|	960H1|
-|Autodesk Advance Steel 2016|	959H1|
-|Autodesk Advance Steel 2016.1|	959H2|
-|Autodesk Advance Steel 2016| with AutoCAD	958H1|
-|Autodesk Alias Automotive 2016|	710H1|
-|Autodesk Alias AutoStudio 2016|	966H1|
-|Autodesk Alias Design 2016|	712H1|
-|Autodesk Alias Surface 2016|	736H1|
-|Autodesk AutoCAD 2016|	001H1|
-|Autodesk AutoCAD Architecture 2016|	185H1|
-|Autodesk AutoCAD Civil 3D 2016|	237H1|
-|Autodesk AutoCAD Design Suite Premium 2016|	768H1|
-|Autodesk AutoCAD Design Suite Standard 2016|	767H1|
-|Autodesk AutoCAD Design Suite Ultimate 2016|	769H1|
-|Autodesk AutoCAD Electrical 2016|	225H1|
-|Autodesk AutoCAD for Mac 2016|	777H1|
-|Autodesk AutoCAD Inventor LT Suite 2016|	596H1|
-|Autodesk AutoCAD LT 2016|	057H1|
-|Autodesk AutoCAD LT Civil Suite 2016|	545H1|
-|Autodesk AutoCAD LT for Mac 2016|	827H1|
-|Autodesk AutoCAD Map 3D 2016|	129H1|
-|Autodesk AutoCAD Mechanical 2016|	206H1|
-|Autodesk AutoCAD MEP 2016|	235H1|
-|Autodesk AutoCAD OEM 2016|	140H1|
-|Autodesk AutoCAD P&ID 2016|	448H1|
-|Autodesk AutoCAD Plant 3D 2016|	426H1|
-|Autodesk AutoCAD Raster Design 2016|	340H1|
-|Autodesk AutoCAD Revit LT Suite 2016|	834H1|
-|Autodesk AutoCAD Structural Detailing 2016|	587H1|
-|Autodesk AutoCAD Utility Design 2016|	213H1|
-|Autodesk Bridge Module 2016|	974H1|
-|Autodesk Building Design Suite Premium 2016|	765H1|
-|Autodesk Building Design Suite Standard 2016|	784H1|
-|Autodesk Building Design Suite Ultimate 2016|	766H1|
-|Autodesk Display Cluster Module for Autodesk VRED Design 2016|	889H1|
-|Autodesk Education Master Suite 2016|	651H1|
-|Autodesk Enterprise Token Flex|	 535H1|
-|Autodesk Entertainment Creation Suite For Education 2016|	656H1|
-|Autodesk Entertainment Creation Suite Ultimate 2016|	793H1|
-|Autodesk Fabrication CADmep 2016|	839H1|
-|Autodesk Fabrication CAMduct 2016|	842H1|
-|Autodesk Fabrication CAMduct Components 2016|	844H1|
-|Autodesk Fabrication ESTmep 2016|	841H1|
-|Autodesk Fabrication RemoteEntry 2016|	845H1|
-|Autodesk Fabrication Tracker 2016|	843H1|
-|Autodesk Factory Design Suite Premium 2016|	757H1|
-|Autodesk Factory Design Suite Standard 2016|	789H1|
-|Autodesk Factory Design Suite Ultimate 2016|	760H1|
-|Autodesk Geotechnical Module 2016|	973H1|
-|Autodesk HSMWorks Premium 2016||Autodesk AutoCAD LT for Mac 2016|	872H1|
-|Autodesk HSMWorks Professional 2016|	873H1|
-|Autodesk Infrastructure Design Suite Premium 2016|	786H1|
-|Autodesk Infrastructure Design Suite Standard 2016|	787H1|
-|Autodesk Infrastructure Design Suite Ultimate 2016|	785H1|
-|Autodesk Infrastructure Map Server 2016|	796H1|
-|Autodesk Infrastructure Map Server 5 Activations 2016|	877H1|
-|Autodesk InfraWorks 2016|	808H1|
-|Autodesk InfraWorks 360 – companion 2016|	976H1|
-|Autodesk InfraWorks 360 2016|	927H1|
-|Autodesk Inventor 2016|	208H1|
-|Autodesk Inventor Engineer-to-Order Series 2016|	805H1|
-|Autodesk Inventor Engineer-to-Order Server 2016|	752H1|
-|Autodesk Inventor HSM 2016|	969H1|
-|Autodesk Inventor LT 2016|	529H1|
-|Autodesk Inventor OEM 2016|	798H1|
-|Autodesk Inventor Professional 2016|	797H1|
-|Autodesk Inventor Publisher 2016|	666H1|
-|Autodesk Maya 2016|	657H1|
-|Autodesk Maya Entertainment Creation Suite Standard 2016|	660H1|
-|Autodesk Maya LT 2016|	923H1|
-|Autodesk Maya with SoftImage 2016|	977H1|
-|Autodesk MotionBuilder 2016|	727H1|
-|Autodesk Mudbox 2016|	498H1|
-|Autodesk Navisworks Manage 2016|	507H1|
-|Autodesk Navisworks Simulate 2016|	506H1|
-|Autodesk Plant Design Suite Premium 2016|	763H1|
-|Autodesk Plant Design Suite Standard 2016|	788H1|
-|Autodesk Plant Design Suite Ultimate 2016|	764H1|
-|Autodesk Point Layout 2016|	925H1|
-|Autodesk Product Design Suite for Education 2016|	654H1|
-|Autodesk Product Design Suite Premium 2016|	782H1|
-|Autodesk Product Design Suite Standard 2016|	783H1|
-|Autodesk Product Design Suite Ultimate 2016|	781H1|
-|Autodesk ReCap 2016||Autodesk ReCap 360 Ultimate 2016|	919H1|
-|Autodesk Revit 2016|	829H1|
-|Autodesk Revit Architecture 2016|	240H1|
-|Autodesk Revit LT 2016|	828H1|
-|Autodesk Revit MEP 2016|	589H1|
-|Autodesk Revit Structure 2016|	255H1|
-|Autodesk River and Flood Analysis Module 2016|	972H1|
-|Autodesk Robot Structural Analysis Professional 2016|	547H1|
-|Autodesk Showcase 2016|	262H1|
-|Autodesk Simulation CFD 2016|	809H1|
-|Autodesk Simulation CFD 2016 Advanced|	810H1|
-|Autodesk Simulation CFD 2016 Connection for NX|	815H1|
-|Autodesk Simulation CFD 2016 Connection for Parasolid	|824H1|
-|Autodesk Simulation CFD 2016 Connection for Pro/E	|822H1|
-|Autodesk Simulation CFD 2016 Design Study Environment|	812H1|
-|Autodesk Simulation CFD 2016 Motion|	811H1|
-|Autodesk Simulation Composite Analysis 2016|	899H1|
-|Autodesk Simulation Composite Design 2016|	918H1|
-|Autodesk Simulation DFM 2016Autodesk Moldflow Design 2016|	837H1|
-|Autodesk Simulation Mechanical 2016|	669H1|
-|Autodesk (Simulation) Moldflow Adviser Premium 2016|	571H1|
-|Autodesk (Simulation) Moldflow Adviser Standard 2016|	570H1|
-|Autodesk (Simulation) Moldflow Adviser Ultimate 2016|	572H1|
-|Autodesk (Simulation) Moldflow Insight Premium 2016|	574H1|
-|Autodesk (Simulation) Moldflow Insight Standard 2016|	573H1|
-|Autodesk (Simulation) Moldflow Insight Ultimate 2016|	575H1|
-|Autodesk (Simulation) Moldflow Synergy 2016|	579H1|
-|Autodesk SketchBook Designer 2016|	741H1|
-|Autodesk SketchBook Pro 2016Autodesk SketchBook Pro for Enterprise 2016|	871H1|
-|Autodesk Smoke 2016 for Mac OS X|	776H1|
-|Autodesk Softimage 2016|	590H1|
-|Autodesk Softimage Entertainment Creation Suite (Standard) 2016|	662H1|
-|Autodesk Vault Collaboration 2016|	549H1|
-|Autodesk Vault Collaboration AEC 2016|	801H1|
-|Autodesk Vault Office 2016|	555H1|
-|Autodesk Vault Professional 2016|	569H1|
-|Autodesk Vault Workgroup 2016|	559H1|
-|Autodesk Vehicle Tracking 2016|	955H1|
-|Autodesk VRED 2016|	884H1|
-|Autodesk VRED Design 2016|	885H1|
-|Autodesk VRED Presenter 2016|	888H1|
-|Autodesk VRED Professional 2016|	886H1|
-|Autodesk VRED Server 2016|	887H1|
-|CADdoctor for Autodesk Simulation 2016|	577H1|
-|Enterprise Multi-Flex Enhanced Bundle 2016|	535H1|
-|mental ray Standalone 2016|	718H1|
-|T1 Enterprise Multi-flex 2016|	535H1|
-|T1 Enterprise Multi-flex Prior Version 2016|	535H1|
-|T1 Enterprise Multi-flex Standard Bundle 2016|	535H1|
-|T1 Enterprise Multi-Flex Standard Prior Version Bundle 2016|	535H1|
+|Autodesk AutoCAD Design Suite Premium 2018|768J1|
+|Autodesk AutoCAD Design Suite Standard 2018|767J1|
+|Autodesk Building Design Suite Premium 2018|765J1|
+|Autodesk Building Design Suite Standard 2018|784J1|
+|Autodesk Building Design Suite Ultimate 2018|766J1|
+|Autodesk Dynamo Studio 2018|A83J1|
+|Autodesk Factory Design Suite Premium 2018|757J1|
+|Autodesk Factory Design Suite Standard 2018|789J1|
+|Autodesk Factory Design Suite Ultimate 2018|760J1|
+|Autodesk Infrastructure Design Suite Premium 2018|786J1|
+|Autodesk Infrastructure Design Suite Standard 2018|787J1|
+|Autodesk Infrastructure Design Suite Ultimate 2018|785J1|
+|Autodesk Infrastructure Map Server 2018|796J1|
+|Autodesk Infrastructure Map Server 5 Activations 2018|877J1|
+|Autodesk Plant Design Suite Premium 2018|763J1|
+|Autodesk Plant Design Suite Standard 2018|788J1|
+|Autodesk Plant Design Suite Ultimate 2018|764J1|
+|Autodesk Product Design Suite Premium 2018|782J1|
+|Autodesk Product Design Suite Ultimate 2018|781J1|
+|Autodesk Stingray 2018|A72J1|
+|Autodesk Structural Bridge Design 2018|954J1|
+|CADdoctor for Autodesk Simulation 2018|577J1|
+|Enterprise Add-on for Autodesk Vault 2018|838J1|
+|RealDWG 2018|151J1|
+|Autodesk 3DS Max 2018|128J1|
+|Autodesk 3ds Max with Softimage 2018|978J1|
+|Autodesk Advance Steel 2018|959J1|
+|Autodesk Alias AutoStudio 2018|966J1|
+|Autodesk Alias Concept 2018|A63J1|
+|Autodesk Alias Design 2018|712J1|
+|Autodesk Alias SpeedForm 2018|A62J1|
+|Autodesk Alias Surface 2018|736J1|
+|Autodesk ArtCAM &#8211; Premium 2018|A9BJ1|
+|Autodesk ArtCAM &#8211; Standard 2018|A9CJ1|
+|Autodesk AutoCAD 2018|001J1|
+|Autodesk AutoCAD Architecture 2018|185J1|
+|Autodesk AutoCAD Civil 3D 2018|237J1|
+|Autodesk AutoCAD Electrical 2018|225J1|
+|Autodesk AutoCAD Inventor LT Suite 2018|596J1|
+|Autodesk AutoCAD LT 2018|057J1|
+|Autodesk AutoCAD LT with CALS Tools 2018|545J1|
+|Autodesk AutoCAD Map 3D 2018|129J1|
+|Autodesk AutoCAD Mechanical 2018|206J1|
+|Autodesk AutoCAD MEP 2018|235J1|
+|Autodesk AutoCAD OEM 2018|140J1|
+|Autodesk AutoCAD Plant 3D 2018|426J1|
+|Autodesk AutoCAD Raster Design 2018|340J1|
+|Autodesk AutoCAD Revit LT Suite 2018|834J1|
+|Autodesk CFD 2018|809J1|
+|Autodesk CFD Advanced 2018|810J1|
+|Autodesk CFD Design Study Environment 2018|812J1|
+|Autodesk Simulation CFD 2018 Motion|811J1|
+|Autodesk Fabrication CADmep 2018|839J1|
+|Autodesk Fabrication CAMduct 2018|842J1|
+|Autodesk Fabrication ESTmep 2018|841J1|
+|Autodesk Factory Design Utilities 2018|P03J1|
+|Autodesk FeatureCAM &#8211; Premium 2018|A9FJ1|
+|Autodesk FeatureCAM &#8211; Standard 2018|A9GJ1|
+|Autodesk FeatureCAM &#8211; Ultimate 2018|A9EJ1|
+|Autodesk Flame 2018|C0TJ1|
+|Autodesk Flame &#8211; Education 2018|C14J1|
+|Autodesk Flame Assist 2018|C0VJ1|
+|Autodesk Flame Premium 2018|C0XJ1|
+|Autodesk Flare 2018|C0WJ1|
+|Autodesk Helius PFA 2018|899J1|
+|Autodesk HSM &#8211; Premium 2018|C12J1|
+|Autodesk HSM &#8211; Ultimate 2018|C13J1|
+|Autodesk HSMWorks Premium 2018|872J1|
+|Autodesk HSMWorks Professional 2018|873J1|
+|Autodesk InfraWorks 360 2018|927J1|
+|Autodesk Inventor 2018|208J1|
+|Autodesk Inventor Engineer-to-Order Series 2018|805J1|
+|Autodesk Inventor Engineer-to-Order Series Distribution Fee 2018|636J1|
+|Autodesk Inventor Engineer-to-Order Server 2018|752J1|
+|Autodesk Inventor ETO &#8211; Developer 2018|A66J1|
+|Autodesk Inventor ETO &#8211; Distribution 2018|996J1|
+|Autodesk Inventor HSM 2018|969J1|
+|Autodesk Inventor HSM Pro 2018|970J1|
+|Autodesk Inventor LT 2018|529J1|
+|Autodesk Inventor OEM 2018|798J1|
+|Autodesk Inventor Professional 2018|797J1|
+|Autodesk Live 2018|02ZJ1|
+|Autodesk Lustre 2018|C0UJ1|
+|Autodesk MEP Fabrication Suite 2018|00QJ1|
+|Autodesk Moldflow Adviser Premium 2018|571J1|
+|Autodesk Moldflow Adviser Ultimate 2018|572J1|
+|Autodesk Moldflow Insight Premium 2018|574J1|
+|Autodesk Moldflow Insight Standard 2018|573J1|
+|Autodesk Moldflow Insight Ultimate 2018|575J1|
+|Autodesk Moldflow Synergy 2018|579J1|
+|Autodesk Nastran 2018|986J1|
+|Autodesk Nastran In-CAD 2018|987J1|
+|Autodesk Navisworks Manage 2018|507J1|
+|Autodesk Navisworks Simulate 2018|506J1|
+|Autodesk Point Layout 2018|925J1|
+|Autodesk PowerInspect &#8211; Premium 2018|A9JJ1|
+|Autodesk PowerInspect &#8211; Standard 2018|A9KJ1|
+|Autodesk PowerInspect &#8211; Ultimate 2018|A9HJ1|
+|Autodesk PowerMill &#8211; Premium 2018|A9AJ1|
+|Autodesk PowerMill &#8211; Standard 2018|A9QJ1|
+|Autodesk PowerMill &#8211; Ultimate 2018|A9PJ1|
+|Autodesk PowerShape &#8211; Premium 2018|A9MJ1|
+|Autodesk PowerShape &#8211; Standard 2018|A9NJ1|
+|Autodesk PowerShape &#8211; Ultimate 2018|A9LJ1|
+|Autodesk Recap 360 Pro 2018|919J1|
+|Autodesk Revit 2018|829J1|
+|Autodesk Revit LT 2018|828J1|
+|Autodesk Robot Structural Analysis Professional 2018|547J1|
+|Autodesk Simulation Mechanical 2018|669J1|
+|Autodesk SketchBook Pro for Enterprise 2018|871J1|
+|Autodesk Smoke 2018 for Mac OSX Desktop Subscription|982J1|
+|Autodesk Structural Fabrication Suite 2018|00RJ1|
+|Autodesk TruComp 2018|00EJ1|
+|Autodesk TruFiber 2018|01WJ1|
+|Autodesk TruLaser 2018|00DJ1|
+|Autodesk TruNest Composites 2018|00BJ1|
+|Autodesk TruNest Contour 2018|00AJ1|
+|Autodesk TruNest Multi-Tool 2018|00CJ1|
+|Autodesk TruPlan 2018|01VJ1|
+|Autodesk Vault Basic &#8212; Client 2018|Z06J1|
+|Autodesk Vault Basic &#8212; Server 2018|463J1|
+|Autodesk Vault File Server 2018|Z07J1|
+|Autodesk Vault Office 2018|555J1|
+|Autodesk Vault Professional 2018|569J1|
+|Autodesk Vault Professional Client 2018|Z04J1|
+|Autodesk Vault Workgroup 2018|559J1|
+|Autodesk Vault Workgroup Client 2018|Z05J1|
+|Autodesk Vehicle Tracking 2018|955J1|
+|Autodesk VRED 2018|884J1|
+|Autodesk VRED Design 2018|885J1|
+|Autodesk VRED Presenter 2018|888J1|
+|Autodesk VRED Professional 2018|886J1|
+|Autodesk VRED Render Node 2018|890J1|
+|Autodesk VRED Server 2018|887J1|
+|CADdoctor for Autodesk Simulation 2018|577J1|
+|Arnold 2018|C0PJ1|
+|Autodesk 3ds Max Entertainment Creation Suite Standard 2018|661J1|
+|Autodesk 3ds Max I/O 2018|C04J1|
+|Autodesk Entertainment Creation Suite Ultimate 2018|793J1|
+|Autodesk Maya 2018|657J1|
+|Autodesk Maya Entertainment Creation Suite Standard 2018|660J1|
+|Autodesk Maya I/O 2018|
+|02BJ1|Autodesk Maya LT 2018|923J1|
+|Autodesk Maya with Softimage 2018|977J1|
+|Autodesk MotionBuilder 2018|727J1|
+|Autodesk Mudbox 2018|498J1|
+|Autodesk Architecture, Engineering &amp; Construction Collection 2018|02HJ1|
+|Autodesk Product Design Collection 2018|02JJ1|
+|Autodesk Media &amp; Entertainment Collection 2018|02KJ1|
+|Autodesk A360 Collaboration for Revit (it still seems to be 995G1)|995J1/|
+|Autodesk A360 Team A360 Team CLOUD|988J1|
+|Autodesk 3ds Max Design 2018|495J1|
+|Autodesk 3ds Max Entertainment Creation Suite Premium 2018|774J1|
+|Autodesk Advance Concrete 2018 (Discontinued)|960I1|
+|Autodesk Advance Steel 2018.1|959J2|
+|Autodesk Advance Steel 2018 with AutoCAD|958J1|
+|Autodesk Alias Automotive 2018 (see Autodesk Alias AutoStudio 2017)|710J1|
+|Autodesk Alias TC Integrator for GM 2018|770J1|
+|Autodesk Architecture Engineering and Construction Suite 2018|00TJ1|
+|Autodesk AutoCAD Design Suite Ultimate 2018|769J1|
+|Autodesk AutoCAD for Mac 2018|777J1|
+|Autodesk AutoCAD LT for Mac 2018|827J1|
+|Autodesk AutoCAD P&amp;ID 2018|448J1|
+|Autodesk AutoCAD Structural Detailing 2017 (see Autodesk Advance Steel 2017)|587J1|
+|Autodesk AutoCAD Utility Design 2018 (Discontinued)|213J1|
+|Autodesk BIM 360 Team CLOUD|P24J1|
+|Autodesk Bridge Module 2018|974J1|
+|Autodesk Bridge Design for InfraWorks 360 2018|956J1|
+|Autodesk Buzzsaw|635J1|
+|Autodesk Buzzsaw Professional|629J1|
+|Autodesk Character Generator 2018|971J1|
+|Autodesk Constructware|290J1|
+|Autodesk Display Cluster Module for Autodesk VRED Design 2018|889J1|
+|Autodesk Configurator 360 Standard|898J1|
+|Autodesk Drainage Design for InfraWorks 360 2017|984J1|
+|Autodesk EAGLE Standard|C0RJ1|
+|Autodesk EAGLE premium|C0SJ1|
+|Autodesk Education Master Suite 2018|651J1|
+|Autodesk Entertainment Creation Suite For Education 2018|656J1|
+|Autodesk Entertainment Creation Suite Standard 2018 Exclusives|P01J1|
+|Autodesk Entertainment Creation Suite Premium 2018 Exclusives|P02J1|
+|Autodesk Fabrication CAMduct Components 2018|844J1|
+|Autodesk Fabrication RemoteEntry 2018|845J1|
+|Autodesk Fabrication Tracker 2018|843J1|
+|Autodesk Flow Design 2018|961J1|
+|Autodesk Formit 360 Pro 2018|A80J1|
+|Autodesk Fusion 360 (it still seems to be: A71G1)|A71J1|
+|Autodesk Fusion 360 Ultimate 2018|994J1|
+|Autodesk GM CAD Convertors 2018|771J1|
+|Autodesk Geotechnical Module 2018|973J1|
+|Autodesk Helius Composite 2018|918J1|
+|Autodesk Infrastructure Map Server 2018|796I1|
+|Autodesk InfraWorks 2018|808J1|
+|Autodesk InfraWorks LT 2018|A77J1|
+|Autodesk InfraWorks 360 ¨C companion 2018|976J1|
+|Autodesk InfraWorks 360 ¨C Design Bundle Plus|A92J1|
+|Autodesk Inventor Engineer-to-Order 2018 &#8211; Server|997J1|
+|Autodesk Inventor Publisher 2018 (discontinued after the 2016 version)|666J1|
+|Autodesk Media and Entertainment Suite 2018|00VJ1|
+|Autodesk Mockup 360 2018|882J1|
+|Autodesk Mudbox 2018|498J1|
+|Autodesk Netfabb 2018 Standard|A95J1|
+|Autodesk Netfabb 2018 Premium|A96J1|
+|Autodesk Netfabb 2018 Ultimate|A97J1|
+|Autodesk Product Design Suite for Education 2018|654J1|
+|Autodesk Product Design Suite Standard 2018|783J1|
+|Autodesk Recap 360 2018|964J1|
+|AutoDesk ReMake 2018 (formely Memento)|01RJ1|
+|Autodesk Revit Collaboration Suite 2018|A78J1|
+|Autodesk Revit Architecture 2018|240J1|
+|Autodesk Revit MEP 2018|589J1|
+|Autodesk Revit Structure 2018|255J1|
+|Autodesk Revit ETO &#8211; Distribution Package 2018|A67J1|
+|Autodesk Revit ETO &#8211; Distribution 2018|A68J1|
+|Autodesk Revit ETO &#8211; Developper 2018|A69J1|
+|Autodesk River and Flood Analysis Module 2018|972J1|
+|Autodesk Roadway Design for InfraWorks 360 2018|953J1|
+|Autodesk Showcase 2018 (Discontinued)|262J1|
+|Autodesk SimStudio Tools 2016 R2|Z23I1|
+|Autodesk Simulation CFD 2018 Connection for NX|815J1|
+|Autodesk Simulation CFD 2018 Connection for Parasolid|824J1|
+|Autodesk Simulation CFD 2018 Connection for Pro/E|822J1|
+|Autodesk Simulation CFD 2018 Flex|A73J1|
+|Autodesk Simulation DFM 2018 (see Autodesk Simulation Moldflow Design 2018)|837J1|
+|Autodesk Simulation Flex 2018|893J1|
+|Autodesk Simulation Mechanical Flex 2018|A74J1|
+|Autodesk Simulation Moldflow Adviser Standard 2018|570J1|
+|Autodesk Simulation Moldflow Flex 2018 (may be A75J1)|892J1|
+|Autodesk SketchBook Designer 2018|741J1|
+|Autodesk Smoke 2018 for Mac OS X|776J1|
+|Autodesk Softimage 2018 (discontinued since 2015)|590J1|
+|Autodesk Softimage Entertainment Creation Suite Standard 2018 (discontinued since 2015)|662J1|
+|Autodesk Studio Wall 2018|992J1|
+|Autodesk TruNest 2018 &#8211; Nesting Engine|00FJ1|
+|Autodesk Urban Canvas 2018|A79J1|
+|Autodesk Vault Collaboration 2018|549J1|
+|Autodesk Vault Collaboration AEC 2018|801J1|
+|Autodesk VRED Render Node &#8211; consumption-based license 2018|A93J1|
+|Autodesk VRED Extension for PROSTEP OpenPDM 2018|A64J1|
+|Cloud Credits|881J1|
+|Enterprise Multi-Flex Enhanced Bundle 2018|980J1|
+|Enterprise Token Flex 2018 (T1 Enterprise Multi-flex 2018, T1 Enterprise Multi-flex Prior Version 2018)|535J1|
+|Mental ray Standalone 2018 (Discontinued)|718J1|
+|T1 Enterprise Multi-flex Standard Bundle 2018|891J1|
+|T1 Enterprise Multi-Flex Standard Prior Version Bundle 2018|897J1|
